fixed text wrapping around videos

--- a/public/docs/css/screen.scss
+++ b/public/docs/css/screen.scss
@@ -216,9 +216,10 @@ nav {
 		}
 	.vimeo-container{
 		width: 75%;
-		padding: 0 0 8px 0;
+		padding: 0 0 8px 8px;
+		margin-left: 8px;
 		margin-top: -4px;
-		float: left;
+		//float: left;
 		position: relative;
     	padding-bottom: 56.25%; /* 16/9 ratio */
     	height: 0;
